エディターだけだとテキストエディターに限らないので修正

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <link href="main.css" rel="stylesheet">
-        <title>Electron Editor</title>
+        <title>Electron Text Editor</title>
     </head>
     
     <body onload="onLoad()">
