JSの読み込み記述をシンプルに変更

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
 	<title>Electron Text Editor</title>
 	<link href="lib/boostrap/css/bootstrap.min.css" rel="stylesheet">
 	<link href="main.css" rel="stylesheet">
-	<script src="lib/ace/ace.js" type="text/javascript" charset="utf-8"></script>
-	<script src="lib/ace/mode-javascript.js" type="text/javascript" charset="utf-8"></script>
-	<script src="lib/ace/theme-twilight.js" type="text/javascript" charset="utf-8"></script>
+	<script src="lib/ace/ace.js"></script>
+	<script src="lib/ace/mode-javascript.js"></script>
+	<script src="lib/ace/theme-twilight.js"></script>
 	<script src="editor.js"></script>
 </head>
 
