--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8"/>
   <title>Electron Text Editor</title>
-  <link href="lib/boostrap/css/bootstrap.min.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link href="main.css" rel="stylesheet"/>
-  <script defer src="lib/ace/ace.js"></script>
-  <script defer src="lib/ace/mode-javascript.js"></script>
-  <script defer src="lib/ace/theme-twilight.js"></script>
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.3.3/ace.js"></script>
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.3.3/mode-javascript.js"></script>
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.3.3/theme-twilight.js"></script>
   <script defer src="editor.js"></script>
 </head>
 <body>
