--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,31 @@
 <head>
   <meta charset="utf-8"/>
   <title>Electron Text Editor</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+  <link rel="stylesheet"
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
   <link href="main.css" rel="stylesheet"/>
-  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.3.3/ace.js"></script>
-  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.3.3/mode-javascript.js"></script>
-  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.3.3/theme-twilight.js"></script>
-  <script defer src="editor.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.3.3/ace.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.3.3/mode-javascript.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.3.3/theme-twilight.js"></script>
+  <script src="editor.js"></script>
 </head>
 <body>
   <div id="header_fixed">
-    <button type="button" class="btn-sm btn-primary" id="btnLoad">読み込む</button>
-    <button type="button" class="btn-sm btn-primary" id="btnSave">保存する</button>
+    <button type="button"
+            class="btn-sm btn-primary"
+            id="btnLoad">
+      読み込む
+    </button>
+    <button type="button"
+            class="btn-sm
+            btn-primary"
+            id="btnSave">
+      保存する
+    </button>
   </div>
   <div id="footer_fixed"></div>
   <div id="input_area">
