--- a/src/index.html
+++ b/src/index.html
@@ -1,37 +1,27 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="utf-8"/>
-  <title>Electron Text Editor</title>
+  <head>
+    <meta charset="utf-8" />
+    <title>Electron Text Editor</title>
 
-  <link rel="stylesheet"
-        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-        crossorigin="anonymous">
-  <link href="main.css" rel="stylesheet"/>
+    <!-- セキュリティーポリシーを指定。Aceライブラリがインラインスタイルを扱うため。 -->
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; style-src 'self' 'unsafe-inline';"
+    />
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.3.3/ace.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.3.3/mode-javascript.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.3.3/theme-twilight.js"></script>
-  <script src="editor.js"></script>
-</head>
-<body>
-  <div id="header_fixed">
-    <button type="button"
-            class="btn-sm btn-primary"
-            id="btnLoad">
-      読み込む
-    </button>
-    <button type="button"
-            class="btn-sm
-            btn-primary"
-            id="btnSave">
-      保存する
-    </button>
-  </div>
-  <div id="footer_fixed"></div>
-  <div id="input_area">
-    <div id="input_txt"></div>
-  </div>
-</body>
+    <link href="main.css" rel="stylesheet" />
+    <script defer src="libs/ace/1.4.14/ace.js"></script>
+    <script defer src="libs/ace/1.4.14/theme-twilight.js"></script>
+    <script defer src="renderer.js"></script>
+  </head>
+  <body>
+    <header class="header">
+      <button class="btn-primary" id="btnOpen">読み込む</button>
+      <button class="btn-primary" id="btnSave">保存する</button>
+    </header>
+    <!-- Aceエディター -->
+    <div id="inputArea"></div>
+    <footer class="footer"></footer>
+  </body>
 </html>
